--- a/ckanext/tess/templates/workflow/edit.html
+++ b/ckanext/tess/templates/workflow/edit.html
@@ -19,20 +19,16 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h2 class="heading">{{ _('Workflow creation guide') }}</h2>
         </div>
-        <div class="modal-body">{% snippet "workflow/snippets/workflow-creation-guide.html" %}
-        </div>
-        <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-            <button class="btn btn-primary" data-dismiss="modal" id="save-material" class="hidden">Save</button>
-        </div>
+        <div class="modal-body">{% snippet "workflow/snippets/workflow-creation-guide.html" %}</div>
+        <div class="modal-footer"><button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
     </div>
 
-        <div class="content_action">
-            <div style="margin-bottom: 13px;">
+    <div class="content_action">
+        <div style="margin-bottom: 13px;">
                 {% link_for _('View'), controller='ckanext.tess.workflow:WorkflowController', action='read', id=c.workflow_dict.id, class_='btn', icon='eye-open' %}
-            </div>
         </div>
-    </header>
+    </div>
+ </header>
 
     {% snippet "workflow/snippets/workflow-property-editor.html" %}
 
