--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -23,9 +23,10 @@
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:15">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Training Materials for <em class="modal-workflow-title"></em></h3>
+    <h3 id="myModalLabel">Training Materials for <em class="modal-workflow-title">...</em></h3>
   </div>
   <div class="modal-body">
+      <div style="width:50px; margin: 0 auto;"><img src="/images/spiffygif_132x132.gif"/></div>
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
