styling for hide property editor button (little x at top right of box)

--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -595,6 +595,12 @@ hr.style-one {
     background-color: transparent;
     border: none;
 }
+#hide-property-editor{
+    float:right;
+    background-color: transparent;
+    border: none;
+}
+
 .wf-meta-form{
     width: 80%;
 
