--- a/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
@@ -20,6 +20,7 @@
             {% endif %}
             {{ form.input('dialog-div', classes=['hidden'], label=_('JSON Representation'), id='dialog-div') }}
         {% endblock %}
+
         <div style="padding-bottom: 30px;">&nbsp;
             {% if h.check_access('workflow_create')  %}
                 <button class="btn btn-primary pull-right" id='save-workflow' name="save" type="submit"><i class="icon-save"></i> Save workflow</button>
@@ -28,7 +29,7 @@
                 {% if h.check_access('workflow_delete', {'id': workflow.id} )  %}
                     {% set locale = h.dump_json({'content': _('Are you sure you want to delete this workflow?')}) %}
                     <a href="{% url_for controller='ckanext.tess.workflow:WorkflowController',
-                     action='delete', id=workflow.id %}" class="btn btn-danger pull-right" data-module="confirm-action" data-module-i18n="{{ locale }}">{{ _('Delete') }}</a>
+                     action='delete', id=workflow.id %}" class="btn btn-danger" style="margin-right:10px" data-module="confirm-action" data-module-i18n="{{ locale }}">{{ _('Delete') }}</a>
                 {% endif %}
             {% endif %}
         </div>
