Added link to email if still stuck on workflows help modal

--- a/ckanext/tess/templates/workflow/edit.html
+++ b/ckanext/tess/templates/workflow/edit.html
@@ -20,7 +20,9 @@
             <h2 class="heading">{{ _('Workflow creation guide') }}</h2>
         </div>
         <div class="modal-body">{% snippet "workflow/snippets/workflow-creation-guide.html" %}</div>
-        <div class="modal-footer"><button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
+        <div class="modal-footer">
+            <span style="float:left">Still Stuck? Contact <a href="mailto:tess@elixir-uk.info">TeSS (tess@elixir-uk.info)</span>
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
     </div>
 
     <div class="content_action">
