Added old guide underneath new one

--- a/ckanext/tess/templates/workflow/edit.html
+++ b/ckanext/tess/templates/workflow/edit.html
@@ -21,7 +21,7 @@
         </div>
         <div class="modal-body">{% snippet "workflow/snippets/workflow-creation-guide.html" %}</div>
         <div class="modal-footer">
-            <span style="float:left">Still Stuck? Contact <a href="mailto:tess@elixir-uk.info">TeSS (tess@elixir-uk.info)</span>
+            <!--<span style="float:left">Still Stuck? Contact <a href="mailto:tess@elixir-uk.info">TeSS (tess@elixir-uk.info)</span>-->
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
     </div>
 
