--- a/ckanext/tess/templates/package/snippets/resources_list.html
+++ b/ckanext/tess/templates/package/snippets/resources_list.html
@@ -27,7 +27,7 @@ Example:
                 This training material has no additional resources.<!-- <a href="{{ url }}">why not add some?</a>-->
             </p>
             <p class="empty">
-                A resource can be any related documentation, tool, service, software, etc. that
+                A resource can be any related documentation, dataset, tool, service, software, etc. that
                 is relevant for this training material.
             </p>
           {% endtrans %}
