--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -24,7 +24,7 @@
 
 {% block content_primary_nav %}
 {{ h.build_nav_icon('dataset_read', _('Material'), id=pkg.name) }}
-{{ h.build_nav_icon('dataset_groups', _('Package'), id=pkg.name) }}
+{{ h.build_nav_icon('dataset_groups', _('Packages'), id=pkg.name) }}
 {{ h.build_nav_icon('dataset_activity', _('Activity log'), id=pkg.name) }}
 {% endblock %}4
 
