Moved events to front

--- a/ckanext/tess/templates/group/read_base.html
+++ b/ckanext/tess/templates/group/read_base.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content_primary_nav %}
-  {{ h.build_nav_icon('group_read', _('Training materials'), id=c.group_dict.name) }}
+  {{ h.build_nav_icon('group_read', _('Materials'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('group_activity', _('Activity log'), id=c.group_dict.name, offset=0) }}
   {{ h.build_nav_icon('group_about', _('About'), id=c.group_dict.name) }}
 {% endblock %}
