Renamed some filter categories, and removed 'event' field and renamed 'meeting' field to 'event'

--- a/ckanext/tess/templates/event/snippets/filters.html
+++ b/ckanext/tess/templates/event/snippets/filters.html
@@ -4,7 +4,7 @@
         {% block facet_list_items %}
         {% for filter_name, filter_options in c.filters.iteritems() %}
 
-        <h2 class="module-heading"><i class="icon-medium icon-filter"></i> {{filter_name.capitalize() }}</h2>
+        <h2 class="module-heading"><i class="icon-medium icon-filter"></i> {{filter_name.replace('_', ' ').capitalize() }}</h2>
         <nav>
             <ul class="{{ nav_class or 'unstyled nav nav-simple nav-facet' }}">
                 {% if not c.active_filters[filter_name] %} <!--c.category not in names -->
