Added a link to the list of training coordinators to the nodes index page.

--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% block subtitle %}{{ _('Content providers') }}{% endblock %}
+{% block subtitle %}{{ _('ELIXIR nodes') }}{% endblock %}
 
 {% block breadcrumb_content %}
   <li class="active">{% link_for _('Nodes'), controller='ckanext.tess.node:NodeController', action='index' %}</li>
