--- a/ckanext/tess/templates/node/training_coordinators.html
+++ b/ckanext/tess/templates/node/training_coordinators.html
@@ -12,7 +12,8 @@
 {% endblock %}
 
 {% block primary_content_inner %}
-   <h1 class="hide-heading">{% block page_heading %}{{ _('Training coordinators') }}{% endblock %}</h1>
+   <h1 class="hide-heading">Training coordinators</h1>
+   {% snippet "home/snippets/training_coordinators.html", training_coordinators=h.training_coordinators() %}
 {% endblock %}
 
 {% block secondary_content %}
