--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -17,8 +17,7 @@
 {% resource 'tess/simplecolorpicker.css' %}<!--<link rel="stylesheet" href="jquery.simplecolorpicker.css">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-<div id="cy" style="float: left;" class="cy"></div>
-
+<div id="cy" style="float: right; margin-right: 15px" class="cy col-md-6 col-md-offset-1"></div>
 
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:15">
   <div class="modal-header">
