--- a/ckanext/tess/templates/workflow/snippets/workflow_info.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow_info.html
@@ -6,7 +6,7 @@
         {% endif %}
 
 <section class="additional-info">
-  <h3 class="heading">{{ _('Workflow Info') }}</h3>
+  <h3 class="heading">{{ _('Details') }}</h3>
   <table class="table table-striped table-bordered table-condensed">
     <thead>
       <tr>
