Very minor UI tweaks.

--- a/ckanext/tess/templates/workflow/ajax/edit_training.html
+++ b/ckanext/tess/templates/workflow/ajax/edit_training.html
@@ -35,7 +35,7 @@
                 $('.modal-workflow-description').removeClass('empty')
             }
             else {
-                $('.modal-workflow-description').text('There is no description for this workflow node');
+                $('.modal-workflow-description').text('There is no description for this workflow node.');
                 $('.modal-workflow-description').addClass('empty')
             }
 
