Renamed buttons 'Manage' and 'View ...' to be consistent across the site.

--- a/ckanext/tess/templates/group/edit_base.html
+++ b/ckanext/tess/templates/group/edit_base.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% block subtitle %}{{ _('Manage') }} - {{ c.group_dict.display_name }} - {{ _('Packages') }}{% endblock %}
+{% block subtitle %}{{ _('Edit') }} - {{ c.group_dict.display_name }} - {{ _('Packages') }}{% endblock %}
 
 {% set group = c.group_dict %}
 
@@ -8,7 +8,7 @@
   <li>{% link_for _('Packages'), controller='group', action='index' %}</li>
   {% block breadcrumb_content_inner %}
     <li>{% link_for group.display_name|truncate(35), controller='group', action='read', id=group.name %}</li>
-    <li class="active">{% link_for _('Manage'), controller='group', action='edit', id=group.name %}</li>
+    <li class="active">{% link_for _('Edit'), controller='group', action='edit', id=group.name %}</li>
   {% endblock %}
 {% endblock %}
 
