--- a/ckanext/tess/templates/group/read_base.html
+++ b/ckanext/tess/templates/group/read_base.html
@@ -7,6 +7,12 @@
   <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='group', action='read', id=c.group_dict.name %}</li>
 {% endblock %}
 
+{% block content_action %}
+  {% if h.check_access('group_update', {'id': c.group_dict.id}) %}
+    {% link_for _('Edit'), controller='group', action='edit', id=c.group_dict.name, class_='btn', icon='wrench' %}
+  {% endif %}
+{% endblock %}
+
 {% block content_primary_nav %}
   {{ h.build_nav_icon('group_read', _('Materials'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('group_activity', _('Activity log'), id=c.group_dict.name, offset=0) }}
