--- a/ckanext/tess/templates/node/edit_base.html
+++ b/ckanext/tess/templates/node/edit_base.html
@@ -8,7 +8,7 @@
   <li>{% link_for _('Nodes'), controller='organization', action='index' %}</li>
   {% block breadcrumb_content_inner %}
     <li>{% link_for organization.display_name|truncate(35), controller='organization', action='read', id=organization.name %}</li>
-    <li class="active">{% link_for _('Manage'), controller='organization', action='edit', id=organization.name %}</li>
+    <li class="active">{% link_for _('Edit'), controller='organization', action='edit', id=organization.name %}</li>
   {% endblock %}
 {% endblock %}
 
