--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -7,7 +7,7 @@
 <!--{% block breadcrumb_content %}-->
 <!--<li><a href="{% url_for 'node' %}">{{ _('Nodes') }}</a></li>-->
 <!--<li><a href="">{{ data.get('display_name') }}</a></li>-->
-<!--<li class="active"><a href="">Manage</a></li>-->
+<!--<li class="active"><a href="">Edit</a></li>-->
 <!--{% endblock %}-->
 
 <!--{% if not action == 'new' %}-->
@@ -28,9 +28,8 @@
     {{ form.errors(error_summary) }}
   {% endblock %}
 
-    {{ form.select('member_status', label=_('Node Membership Status'), options=[{'name': 'status', 'value': 'Member'}, {'name':'status', 'value': 'Observer'}], selected=data.get('member_status', 'Member'), error=errors.year) }}
         {% set node_view_url = h.url_for('node_read', action='read', id=data.name) %}
-        <a class="btn" href="{{node_view_url}}" style="float:right; margin-bottom: 20px;"><i class="icon-eye-open"></i> View node</a>
+        <a class="btn" href="{{node_view_url}}" style="float:right; margin-bottom: 20px;"><i class="icon-eye-open"></i> View</a>
         <div style="clear:both;"></div>
 
   {% block basic_fields %}
@@ -72,7 +71,7 @@
 
     {{ form.input('home_page', label=_('Home page'), id='home_page', placeholder=("URL of the node's home page"), value=data.home_page, classes=['control-medium']) }}
 
-    {{ form.select('member_status', label=_('Membership status in ELIXIR'), options=[{'name': 'status', 'value': 'Member'}, {'name':'status', 'value': 'Observer'}], selected=data.get('member_status', 'Member'), error=errors.year) }}
+    {{ form.select('member_status', label=_('Membership status'), options=[{'name': 'status', 'value': 'Member'}, {'name':'status', 'value': 'Observer'}], selected=data.get('member_status', 'Member'), error=errors.year) }}
 
     <hr>
     <!-- Add member institutions -->
