--- a/ckanext/tess/templates/group/read_base.html
+++ b/ckanext/tess/templates/group/read_base.html
@@ -8,6 +8,10 @@
 {% endblock %}
 
 {% block content_action %}
+  {% if h.check_access('group_delete', {'id': c.group_dict.id})  %}
+    {% set locale = h.dump_json({'content': _('Are you sure you want to delete this package?')}) %}
+      <a class="btn btn-danger pull-left" href="{% url_for controller='group', action='delete', id=c.group_dict.id %}" style="margin-right:20px" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
+  {% endif %}
   {% if h.check_access('group_update', {'id': c.group_dict.id}) %}
     {% link_for _('Edit'), controller='group', action='edit', id=c.group_dict.name, class_='btn', icon='wrench' %}
   {% endif %}
