--- a/ckanext/tess/templates/header.html
+++ b/ckanext/tess/templates/header.html
@@ -2,6 +2,9 @@
 {% block header_account %}
 <header class="account-masthead">
     <div class="container">
+        <a href="http://www.elixir-europe.org/">
+            <img src="http://elixir-uk.org/++theme++elixir-uktheme/static/hub-logo.png"/>
+        </a>
         {% block header_account_container_content %}
         {% if c.userobj %}
         <div class="account avatar authed" data-module="me" data-me="{{ c.userobj.id }}">
